--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,7 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-minima
 title: Anthony’s Mac Labs Blog
 url: https://maclabs.jazzace.ca
 description: Anthony Reimer’s blog for Mac Admins that shares what he’s learned recently
-plugins:
-  - jekyll-feed
 author:
   name: Anthony Reimer
   mastodon: AnthonyReimer@mastodon.social
