Change theme to minima (Jekyll default)

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minima
+theme: minima
 title: Anthony’s Mac Labs Blog
 url: https://maclabs.jazzace.ca
 description: Anthony Reimer’s blog for Mac Admins that shares what he’s learned recently
